[package]
name = "gear"
version = "0.3.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]
description = "Collision avoidance path planning for robotics"
license = "Apache-2.0"
keywords = ["pathplanning", "robotics"]
categories = ["algorithms"]
repository = "https://github.com/OTL/gear"
documentation = "http://docs.rs/gear"
readme = "README.md"

[dependencies]
failure = "0.1"
k = { version = "0.12.0", path = "../k" }
log = "0.3.8"
nalgebra = "0.15.0"
ncollide3d = "0.16.0"
rand = "0.3.0"
rrt = "0.4.0"
urdf-rs = "0.4.0"
trajectory = "0.0.1"
num-traits = "0.1"
assimp = "0.3.0"

[dev-dependencies]
env_logger = "0.4.2"
glfw = "0.19.0"
structopt = "0.2.0"
urdf-viz = "0.12.0"

[patch.crates-io]
k = {version = "0.12.0", path = "../k" }